--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,9 @@
 }
 
 .searchInputs {
-  margin-top: 105px;
   margin-bottom: 100px;
+  display: flex;
+  box-shadow: 0 2px 15px -4px gray;
 }
 
 .search input{
@@ -47,22 +48,16 @@
   border: 0;
   border-radius: 2px;
   padding: 5px;
-  height: 30px;
   font-size: 18px;
+
 }
-
-
-
-/* 
-.searchIcon {
-height: 60px;
-width: 50px;
-background-color: white;
-display: grid;
-place-items: center;
-}
- */
 
  .blog-preview {
    padding: 15px;
+ }
+
+ .selfText {
+   color: grey;
+   padding: 50px;
+
  }
