--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   max-width: 600px;
-  margin: 0 auto;
+ justify-content: center;
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
